Fixed dark mode

--- a/OLGIATI.styles.css
+++ b/OLGIATI.styles.css
@@ -76,7 +76,6 @@ table {
 }
 
 
-
 /* ----- CHECK FOR USER DARK MODE PREFERENCE ----- */
 /* --------------- BEGIN USER PREFERS DARK COLOR SCHEME QUERY --------------- */
 
@@ -89,19 +88,6 @@ table {
 }
 
 /* --------------- END USER PREFERS DARK COLOR SCHEME QUERY --------------- */
-
-/*@media (prefers-color-scheme: dark) {
-    html {
-      background-color: red;
-    }
-  }
-  
-  @media (prefers-color-scheme: light) {
-    html {
-      background-color: blue;
-    }
-  }*/
-
 
 
 /* ----- HEADINGS ----- */
